manifests/backstage-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-deployment
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage-app
  template:
    metadata:
      labels:
        app: backstage-app
    spec:
      containers:
        - name: backstage-node
          image: vamc08/backstage:latest
