manifests/backstage-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    external-dns.alpha.kubernetes.io/hostname: backstage.ioinfo.shop
    cert-manager.io/cluster-issuer: backstage-issuer
  namespace: backstage
spec:
  tls:
  - hosts:
      - backstage.ioinfo.shop
    secretName: backstage-secret
  rules:
  - host: backstage.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage-app-service
            port:
              number: 80
